--- a/manifiest/findMutants.yaml
+++ b/manifiest/findMutants.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     kubernetes.io/change-cause: "¡Despliegue modulo transversal!"
   name: findmutants-deployment
-  namespace: transversales
+  namespace: meli
   labels:
     app: findmutants
 # Deployment Section
@@ -24,7 +24,7 @@ spec:
     spec:
       containers:
       - name: findmutants
-        image: acrrunt2.azurecr.io/azconsultaautomotorms:1.0.1
+        image: acrgrupo1.azurecr.io/findmutants:1.0.0
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
@@ -40,7 +40,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: findmutants-service
-  namespace: transversales
+  namespace: meli
   labels:
     app: findmutants
 spec:
@@ -60,7 +60,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  namespace: transversales
+  namespace: meli
   name: findmutants-ingress
   annotations:
     kubernetes.io/ingress.class: azure/application-gateway
@@ -92,7 +92,7 @@ eason":"ValidMetricFound","message":"the
     autoscaling.alpha.kubernetes.io/current-metrics: '[{"type":"Resource","resource":{"name":"cpu","currentAverageUtilization":1,"currentAverageValue":"2m"}}]'
   creationTimestamp: "2021-12-08T17:22:01Z"
   name: findmutants-hpa
-  namespace: transversales
+  namespace: meli
   resourceVersion: "2666847"
   uid: eaa1276b-1434-4e31-a41e-09e7cbcf1683
 spec:
